--- a/.env
+++ b/.env
@@ -2,5 +2,5 @@ DB_USERNAME = airbbq_user
 DB_PASSWORD = productowner
 DB_DATABASE = airbbq
 DB_HOST = localhost
-JWT_SECRET = anywords
+JWT_SECRET = airbbqisawesome
 JWT_EXPIRES_IN = 864000
